--- a/p2/.gitignore
+++ b/p2/.gitignore
@@ -42,7 +42,6 @@ bower_components
 .lock-wscript
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-client/build
 build/Release
 
 # Dependency directories
@@ -124,8 +123,4 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-# Netlify
-.netlify
-
-# Configuration Package
-default.json
+*/*default.json
