--- a/p2/server/package.json
+++ b/p2/server/package.json
@@ -8,7 +8,7 @@
   "private": false,
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "watch": "nodemon server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
