Prep for heroku deployment and minor readme root changes

--- a/p2/package.json
+++ b/p2/package.json
@@ -7,15 +7,18 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "client": "yarn --cwd client start",
-    "client-install": "yarn --cwd client install",
-    "client-build": "yarn --cwd client build",
-    "server": "yarn --cwd server start",
-    "server-dev": "yarn --cwd server watch",
-    "server-install": "yarn --cwd server install",
-    "install-project-deps": "yarn client-install && yarn server-install",
+    "yclient": "yarn --cwd client start",
+    "yclient-install": "yarn --cwd client install",
+    "yclient-build": "yarn --cwd client build",
+    "yserver": "yarn --cwd server start",
+    "yserver-dev": "yarn --cwd server watch",
+    "yserver-install": "yarn --cwd server install",
+    "yinstall-project-deps": "yarn client-install && yarn server-install",
     "concur": "concurrently \"yarn run client\" \"yarn run server\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "client": "npm start --prefix client",
+    "clientInstall": "npm install --prefix client",
+    "start": "node server/server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client && npm install --prefix server"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
